2019-06-18         Arnold D. Robbins     <arnold@skeeve.com>

	* 5.0.1: Release tar ball made.

2019-06-06         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-05-12         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-04-27         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-04-18         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-04-12         Arnold D. Robbins     <arnold@skeeve.com>

	* 5.0.0: Release tar ball made.

2019-04-12         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2018-12-18         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawk.1: Updated.
	* gawktexi.in: Updated.

2018-09-07         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in, gawk.1, texinfo.tex: Remove execute permission.

2018-07-29         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updates for NaN/Infinity and pty example

2018-06-15         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updates.

2018-06-06         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updates.

2018-05-25         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updates.

2018-05-14         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updates.
	* texinfo.tex: Updated to current version.

2018-05-12         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updates.

2018-03-30         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updates.

2018-03-11         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updates modified month.

2018-02-25         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.2.1: Release tar ball made.

2018-02-17         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: More updates.

2017-02-17         Antonio Giovanni Colombo   <azc100@gmail.com>
