@@ -1,3 +1,7 @@
+2019-06-18         Antonio Giovanni Colombo   <azc100@gmail.com>
+
+	* gawktexi.in: Updated.
+
 2019-06-18         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* 5.0.1: Release tar ball made.
